style.css
@import url("https://fonts.googleapis.com/css2?family=Aref+Ruqaa+Ink:wght@400&display=swap");

:root {
  color-scheme: light dark;

  font-family: Avenir, system-ui, "Segoe UI", Roboto, Helvetica, Arial,
    sans-serif;
  background-color: var(--color-white);
  color: var(--color-green);

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
  scroll-behavior: smooth;
  --main-max-width: 768px;
}

@media (prefers-color-scheme: light) {
  :root {
    --color-olive: #171c1c;
    --color-green: #2f5446;
    --color-sky: #a3e2dc;
    --color-white: #fff;
    --color-orange: #e7783a;
    --color-red: #7f3417;
    --color-brown: #281811;
  }
}

@media (prefers-color-scheme: dark) {
  :root {
    --color-white: #000;
    --color-sky: #2f5446;
    --color-green: #fff;
    --color-olive: #fff;
    --color-orange: #f4925c;
    --color-red: #7f3417;
    --color-brown: #daaa97;
  }
}

* {
  box-sizing: border-box;
}

.hidden {
  display: none;
}

html,
body,
main {
  margin: 0;
  padding: 0;
  min-width: 100vw;
  max-width: 100vw;
  min-height: 100vh;
  display: grid;
  place-items: center;
  box-sizing: border-box;
}
main {
  overflow: hidden;
}

section {
  display: block;
  min-width: 320px;
  width: 100vw;
  display: grid;
  place-items: start;
  max-width: var(--main-max-width);
  padding: 1rem;
}

article {
  padding: 1rem 0;
  border-top: solid 1px white;
}

a {
  line-height: 2rem;
  color: var(--color-orange);
}

a[href^="#"]:not(#read-more) {
  text-decoration: none;
  color: inherit;
}

/* Headings */

h1 {
  text-align: center;
  font-family: "Aref Ruqaa Ink", Inter, Avenir, Helvetica, Arial, sans-serif;
  font-size: 2.5rem;
  line-height: 1.1;
  margin-top: 2rem;
  position: relative;
  z-index: 1;
  width: 100%;
}

h2 {
  font-size: 1.5rem;
}

h3 {
  font-size: 1rem;
  text-align: left;
}

@media screen and (min-width: 768px) {
  h1 {
    width: auto;
  }
  h2 {
    font-size: 2rem;
  }
  h3 {
    font-size: 1.5rem;
  }
}

/* Pictures */

img {
  margin: 0 auto;
  max-width: 100%;
}

.background-photo {
  display: none;
  height: 100vh;
  width: 100vw;
  background-image: url("/photo.jpg");
  background-repeat: no-repeat;
  background-position: bottom right;
  background-size: 75%;
  background-color: black;
}

.logo {
  background-color: var(--color-orange);
  -webkit-mask-image: url("/logo.svg");
  mask-image: url("/logo.svg");
  mask-size: 100%;
  margin-top: 1rem;
  transform: rotate(-90deg);
  user-select: none;
  min-width: 16rem;
  max-width: 768px;
  min-height: 16rem;
  max-height: 50vh;
}

@media screen and (min-width: 768px) {
  .background-photo {
    display: block;
  }
  .logo {
    position: absolute;
    top: -1rem;
    left: 22rem;
    transform: scale(0.8) rotate(-90deg);
  }
  h1.title {
    position: absolute;
    top: 2rem;
    left: 4rem;
    font-size: 3rem;
    color: var(--color-orange);
  }
}

p {
  position: relative;
  margin: 1rem 0;
  text-align: justify;
}

footer {
  width: 100vw;
  background-color: var(--color-orange);
  color: var(--color-white) !important;
  padding: 1rem;
}

footer a {
  color: var(--color-white);
  display: block;
}

footer .footer-content {
  width: min(var(--main-max-width), 100%);
  margin: auto;
  display: flex;
  flex-direction: column;
}

@media screen and (min-width: 768px) {
  footer .footer-content {
    flex-direction: row;
    gap: max(10vw, 3rem);
  }
}

img.profile {
  max-width: min(28rem, 90vw);
  position: relative;
  top: 1rem;
}

section.dark {
  position: relative;
  background: black;
  color: white;
}
section.dark a {
  color: var(--color-orange);
}
section.dark::before {
  content: "";
  position: absolute;
  top: 0;
  bottom: 0;
  right: -100vw;
  left: -100vw;
  background: black;
  z-index: -1;
}

@keyframes expand {
  from {
    max-height: 0px;
  }
  to {
    max-height: 100vh;
  }
}

.transition-expand-in {
  animation-duration: 600ms;
  animation-name: expand;
  animation-timing-function: ease-in-out;
  overflow: hidden;
}

